add oidc examples for pre and post apache kafka 4.0